--- a/nx.json
+++ b/nx.json
@@ -75,7 +75,7 @@
       "unitTestRunner": "jest"
     },
     "@nx/angular:component": {
-      "style": "css"
+      "style": "scss"
     }
   }
 }
